// Vitest Snapshot v1

exports[`generateFromLocalFiles > should generate correct JavaScript 1`] = `
[
  "import { buildClient } from \\"@xata.io/client\\";
const links = { authors: [], posts: [[\\"author\\", \\"authors\\"]], people: [] };
/** @typedef { import('./types').DatabaseSchema } DatabaseSchema */
/** @typedef { import('@xata.io/client').SchemaNamespace<DatabaseSchema> } SchemaNamespace */
/** @typedef { import('@xata.io/client').SearchNamespace<DatabaseSchema> } SearchNamespace */
/** @typedef { { db: SchemaNamespace, search: SearchNamespace }} Namespaces */
/** @type { import('@xata.io/client').WrapperConstructor<DatabaseSchema, Namespaces> } */
const DatabaseClient = buildClient();
export class XataClient extends DatabaseClient {
  constructor(options) {
    super(
      {
        databaseURL: \\"https://my-workspace-gfdd12.xata.sh/db/hello-xata\\",
        ...options,
      },
      links
    );
  }
}
",
  "import { BaseClientOptions, XataRecord } from '@xata.io/client';
export interface Author {
    name?: string | null;
    email?: string | null;
    photoUrl?: string | null;
    bio?: string | null;
    title?: string | null;
}
export declare type AuthorRecord = Author & XataRecord;
export interface Post {
    title?: string | null;
    summary?: string | null;
    content?: string | null;
    tags?: string[] | null;
    likes?: number | null;
    author?: AuthorRecord | null;
    date?: string | null;
    slug?: string | null;
    published?: boolean | null;
}
export declare type PostRecord = Post & XataRecord;
export interface Person {
    slug?: string | null;
    name?: string | null;
    title?: string | null;
    photoUrl?: string | null;
}
export declare type PersonRecord = Person & XataRecord;
export declare type DatabaseSchema = {
    authors: Author;
    posts: Post;
    people: Person;
};
declare const DatabaseClient: any;
export declare class XataClient extends DatabaseClient {
    constructor(options?: BaseClientOptions);
}
export {};
",
]
`;

exports[`generateFromLocalFiles > should generate correct TypeScript 1`] = `
[
  "import { buildClient, BaseClientOptions, XataRecord } from \\"@xata.io/client\\";

export interface Author {
  name?: string | null;
  email?: string | null;
  photoUrl?: string | null;
  bio?: string | null;
  title?: string | null;
}

export type AuthorRecord = Author & XataRecord;

export interface Post {
  title?: string | null;
  summary?: string | null;
  content?: string | null;
  tags?: string[] | null;
  likes?: number | null;
  author?: AuthorRecord | null;
  date?: string | null;
  slug?: string | null;
  published?: boolean | null;
}

export type PostRecord = Post & XataRecord;

export interface Person {
  slug?: string | null;
  name?: string | null;
  title?: string | null;
  photoUrl?: string | null;
}

export type PersonRecord = Person & XataRecord;

export type DatabaseSchema = {
  authors: Author;
  posts: Post;
  people: Person;
};

const links = { authors: [], posts: [[\\"author\\", \\"authors\\"]], people: [] };

const DatabaseClient = buildClient<DatabaseSchema>();

export class XataClient extends DatabaseClient {
  constructor(options?: BaseClientOptions) {
    super(
      {
        databaseURL: \\"https://my-workspace-gfdd12.xata.sh/db/hello-xata\\",
        ...options,
      },
      links
    );
  }
}
",
]
`;
